--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zoheb06",
-  "homepage": "https://portfolio.github.io/zoheb06",
+  "homepage": "https://zoheb06.github.io/portfolio/",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
